Add stocky.js script to index.html

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
     <!-- MAIN APP SCRIPTS -->
     <script src="js/logic.js"></script>
     <script src="js/view.js"></script>
+    <script src="js/stocky.js"></script>
     <script src="js/app.js"></script>
 
 </body>
